re PR debug/39485 (-O0 -g still puts whole object to a register)

PR debug/39485
	* function.c (use_register_for_decl): When not optimizing, disregard
	register keyword for variables with types containing methods.

From-SVN: r144939